Github Copilot :github:

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -6,7 +6,7 @@
   {{template "head" .}}
 </head>
 
-<body>
+<body hx-boost="true">
   <!-- sidenav  -->
   <div class="flex">
     {{template "sidebar" .}}
@@ -17,7 +17,7 @@
       {{template "navbar" .}}
       <!-- end Navbar -->
       <!-- Main -->
-      <div id="contenido" class="">
+      <div id="contenido">
 
       </div>
       <div class="h-36">
