--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -1,19 +1,19 @@
 {{define "head"}}
-  
+
 <meta charset="UTF-8" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8" />
 
 
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-<link rel="manifest" href="/assets/icons/site.webmanifest">
-<link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="/assets/icons/favicon.ico">
+<!-- <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png"> -->
+<!-- <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png"> -->
+<!-- <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png"> -->
+<!-- <link rel="manifest" href="/assets/icons/site.webmanifest"> -->
+<!-- <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#5bbad5"> -->
+<!-- <link rel="shortcut icon" href="/assets/icons/favicon.ico"> -->
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
+<!-- <meta name="msapplication-config" content="/assets/icons/browserconfig.xml"> -->
 <meta name="theme-color" content="#ffffff">
 
 
@@ -24,10 +24,10 @@
   integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!-- Main Styling -->
-<link rel="stylesheet" type="css" href="/assets/css/styles.css">
+<!-- <link rel="stylesheet" type="css" href="/assets/css/styles.css"> -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.tailwindcss.com"></script>
-<script src="https://unpkg.com/htmx.org@1.9.5"></script>
+<script src="https://unpkg.com/htmx.org@2.0.0"></script>
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://unpkg.com/htmx.org/dist/ext/class-tools.js"></script>
 <script src="https://unpkg.com/hyperscript.org@0.9.11"></script>
