Adding ui to expenses app

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -29,7 +29,12 @@
       </div>
     </div>
   </div>
+  <div class="absolute m-4 right-0 z-50 top-0 ">
+    <div id="mitoast">
+    </div>
+  </div>
 </body>
 {{template "scripts" .}}
+
 </html>
 {{end}}
