List Expenses ready

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -6,17 +6,20 @@
   {{template "head" .}}
 </head>
 
-<body hx-boost="true">
+<body>
   <div class="flex">
     {{template "sidebar" .}}
-    <div id="contenido">
-    </div>
+    <main class="flex-1 overflow-y-auto bg-white lg:h-screen">
+      <div id="contenido">
+
+      </div>
     </main>
   </div>
+      <div >
+      </div>
   <div id="mitoast" class="absolute m-4 right-0 z-50 top-0 ">
   </div>
 </body>
 {{template "scripts" .}}
-
 </html>
 {{end}}
