--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -24,7 +24,7 @@
   integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!-- Main Styling -->
-<!-- <link rel="stylesheet" type="css" href="/assets/css/styles.css"> -->
+<link rel="stylesheet" type="css" href="/assets/css/styles.css">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/htmx.org@2.0.0"></script>
