--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -2,7 +2,7 @@
 <!-- component -->
 <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" />
 
-<div class="min-h-screen flex flex-row bg-gray-100">
+<div class="min-h-screen flex flex-row bg-white">
   <div class="flex flex-col w-56 bg-white rounded-r-3xl overflow-hidden">
     <div class="flex items-center justify-center h-20 shadow-md">
       <h1 class="text-3xl uppercase text-indigo-500">Expenses</h1>
