--- a/views/sections/tracking/table.html
+++ b/views/sections/tracking/table.html
@@ -1,39 +1,37 @@
 <!-- Table -->
 <div id="table">
-<div class="p-10 items-center justify-center">
-  <div class="overflow-x-auto">
-    <table class="min-w-full bg-white shadow-md rounded-xl">
-      <thead>
-        <tr class="bg-blue-gray-100 text-gray-700">
-          <th class="py-3 px-4 text-left">Date</th>
-          <th class="py-3 px-4 text-left">Shop</th>
-          <th class="py-3 px-4 text-left">Product</th>
-          <th class="py-3 px-4 text-left">Category</th>
-          <th class="py-3 px-4 text-left">Price</th>
-          <th class="py-3 px-4 text-left">Action</th>
+  <div class="overflow-x-auto border shadow-md rounded-xl border-gray-200">
+    <table class="min-w-full bg-white" >
+      <thead class= "rounded-full">
+        <tr class="bg-slate-100 text-gray-700 rounded-lg ">
+          <th class="px-4 py-3 text-left">Date</th>
+          <th class="px-4 py-3 text-left">Shop</th>
+          <th class="px-4 py-3 text-left">Product</th>
+          <th class="px-4 py-3 text-left">Category</th>
+          <th class="px-4 py-3 text-left">Price</th>
+          <th class="px-4 py-3 text-left">Action</th>
         </tr>
       </thead>
       <tbody class="text-blue-gray-900">
         {{range .Expenses}}
-        <tr id="expenseRow{{ .ID }}" class="border-b border-blue-gray-200">
-          <td class="py-3 px-4">{{ .Date.Format "02-01-2006" }}</td>
-          <td class="py-3 px-4">{{.Shop}}</td>
-          <td class="py-3 px-4">{{.Product }}</td>
-          <td class="py-3 px-4">
+        <tr id="expenseRow{{ .ID }}" class="border-b border-blue-gray-200 p-0">
+          <td class="px-4 py-1">{{ .Date.Format "02-01-2006" }}</td>
+          <td class="px-4 py-1">{{.Shop}}</td>
+          <td class="px-4 py-1">{{.Product }}</td>
+          <td class="px-4 py-1">
             {{ $colors := nameToColor .Category }}
             <span
-              class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5 py-0.5 rounded'>{{.Category}}</span>
+              class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5  rounded'>{{.Category}}</span>
           </td>
-          <td class="py-3 px-4">${{printf "%.2f" .Amount}}</td>
-          <td class="py-3 px-4">
-            <button hx-get="/expenses/{{ .ID }}/edit" hx-target="#expenseRow{{.ID}}" hx-push-url="true" hx-swap="outerHTML" class="font-medium text-blue-600 hover:text-blue-800">Edit</button>
+          <td class="px-4 py-1">${{printf "%.2f" .Amount}}</td>
+          <td class="px-4 py-1">
+            <button hx-get="/expenses/{{ .ID }}/edit" hx-target="#expenseRow{{.ID}}" hx-push-url="true" hx-swap="outerHTML" class="font-medium fade-me-out text-blue-600 hover:text-blue-800">Edit</button>
           </td>
         </tr>
         {{end}}
       </tbody>
     </table>
   </div>
-</div>
 
 <!-- Pagination -->
 <div class="flex flex-col items-center">
