--- a/views/sections/tracking/rowEdit.html
+++ b/views/sections/tracking/rowEdit.html
@@ -1,17 +1,17 @@
-<tr id="editRow" class="border-b border-blue-gray-200">
-  <td class="py-3 px-4">
-    <input class="bg-gray-50 p-2.5 rounded-md" type="date" id="date" name="date"
+<tr id="editRow{{ .Expense.ID }}" class="border-b border-blue-gray-200 shadow-lg bg-blue-100 fade-me-out">
+  <td class="py-0 px-2">
+    <input class="bg-gray-50 px-2 rounded-md" type="date" id="date" name="date"
       value='{{ .Expense.Date.Format "2006-01-02" }}'>
   </td>
-  <td class="py-3 px-4">
-    <input class="bg-gray-50 p-2.5 rounded-md" type="text" id="shop" name="shop" value="{{ .Expense.Shop }}">
+  <td class="py-0 px-4">
+    <input class="bg-gray-50 px-2 rounded-md" type="text" id="shop" name="shop" value="{{ .Expense.Shop }}">
   </td>
-  <td class="py-3 px-4">
-    <input class="bg-gray-50 p-2.5 rounded-md" type="text" id="product" name="product" value="{{ .Expense.Product}}">
+  <td class="py-0 px-4">
+    <input class="bg-gray-50 px-2 rounded-md" type="text" id="product" name="product" value="{{ .Expense.Product }}">
   </td>
-  <td class="py-3 px-4">
+  <td class="py-0 px-4">
     <select id="category" name="category"
-      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full p-2.5">
+      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full p-1">
       {{ $current := .Expense.Category }}
       {{ range $id, $name := .Categories }}
       {{ if eq $current $name}}
@@ -22,14 +22,15 @@
       {{end}}
     </select>
   </td>
-  <td class="py-3 px-4">
-    <input class="bg-gray-50 p-2.5 lg rounded-md" type="number" min="0" id="amount" name="amount"
+  <td class="p-0 px-4">
+    $ <input class="w-20 px-1 border border-gray-300 rounded-md" type="number" min="0" id="amount" name="amount"
       value='{{printf "%.2f" .Expense.Amount}}'>
   </td>
-  <td class="py-3 px-4">
-<button id="apply" hx-trigger="click" class="font-medium text-blue-600 hover:text-blue-800"> Apply </button>
-<div id="mitoast" hx-put="/expenses/{{ .Expense.ID }}" hx-swap="innerHTML" hx-include="#editRow input, #editRow select" hx-trigger="click from: #apply"> </div>
-<div id="editRow" hx-get="/expenses/{{ .Expense.ID }}/row" hx-swap="outerHTML" hx-trigger="click from: #apply"> </div>
-<button id="cancel" hx-get="/expenses/{{ .Expense.ID }}/row" hx-swap="outerHTML" hx-trigger="click" class="font-medium text-red-600 hover:text-red-800">Cancel</button>
+  <td class="py-0 px-0 pb-0 mb-0 h-full flex float justify-center items-center">
+    <button id="apply" hx-trigger="click" class="border border-green-300 p-1 w-full font-medium bg-green-200 text-green-500 hover:text-green-800"> <i class='bx bx-check'></i> </button>
+    <div hx-put="/expenses/{{ .Expense.ID }}" hx-swap="innerHTML" hx-target="#mitoast" hx-include="#editRow{{.Expense.ID}} input, #editRow{{.Expense.ID}} select" hx-trigger="click from:#apply"> </div>
+    <div hx-get="/expenses/{{ .Expense.ID }}/row" hx-swap="outerHTML" hx-target="#editRow{{.Expense.ID}}" hx-trigger="reloadRow from:body"> </div>
+    <button id="cancel" hx-get="/expenses/{{ .Expense.ID }}/row" hx-swap="outerHTML" hx-target="#editRow{{ .Expense.ID }}" hx-trigger="click" 
+      class="border border-red-300 p-1 h-full w-full font-medium bg-red-200 text-red-500 hover:text-red-800"><i class='bx bx-x'></i></button>
   </td>
 </tr>
