--- a/views/sections/tracking/index.html
+++ b/views/sections/tracking/index.html
@@ -1,3 +1,5 @@
 <!-- Load table with HTMX -->
+<!-- <div  hx-get="/expenses/form" hx-trigger="revealed" hx-target="this" hx-swap="innerHTML" class="p-5 m-0"> -->
+<!-- </div> -->
 <div  hx-get="/expenses/table" hx-trigger="revealed" hx-target="this" hx-swap="innerHTML" class="p-5 m-0">
 </div>
