--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -21,11 +21,11 @@
           class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
           <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
               class="bx bx-table"></i></span>
-          <span class="text-sm font-medium">Expenese</span>
+          <span class="text-sm font-medium">Expenses</span>
         </button>
       </li>
       <li>
-        <button hx-trigger="click,{{ .ImporterTrigger }}" hx-get="/importer" hx-swap="innerHTML" hx-target="#contenido" hx-push-url="true"
+        <button hx-trigger="click,{{ .ImporterTrigger }}" hx-get="/importers" hx-swap="innerHTML" hx-target="#contenido" hx-push-url="true"
           class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
           <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
               class="bx bxs-file-import"></i></span>
