--- a/views/sections/expenses/table.html
+++ b/views/sections/expenses/table.html
@@ -1,3 +1,4 @@
+
 <!-- Table -->
 <div id="table">
   <div class="overflow-x-auto border shadow-md rounded-xl border-gray-200">
@@ -43,7 +44,7 @@
         class="font-semibold text-gray-900 dark:text-white">{{ .PageSize }}</span> Entries)
     </span>
     <div class="inline-flex mt-2 xs:mt-0">
-      <button hx-get="/expenses/table?days_from=190&page_num={{ .PrevPage }}" hx-swap="outerHTML" hx-target="#table"
+      <button hx-get="/expenses/table?page_num={{ .PrevPage }}" hx-swap="outerHTML" hx-target="#table" hx-include="#filters input, #filters select"
         hx-push-url="true"
         class="flex items-center justify-center px-4 h-10 text-base font-medium text-white bg-gray-800 rounded-s hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
         {{ if eq .CurrentPage 0 }} disabled {{end}}>
@@ -54,7 +55,7 @@
         </svg>
         Prev
       </button>
-      <button hx-get="/expenses/table?days_from=190&page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table"
+      <button hx-get="/expenses/table?page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table" hx-include="#filters input, #filters select"
         hx-push-url="true"
         class="flex items-center justify-center px-4 h-10 text-base font-medium text-white bg-gray-800 border-0 border-s border-gray-700 rounded-e hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
         Next
