--- a/views/sections/importers/revolut.html
+++ b/views/sections/importers/revolut.html
@@ -1,10 +1,10 @@
-<div class="p-10 items-center justify-center">
+<div class="p-10 items-center justify-center w-1/2">
   <div class="overflow-x-auto">
-
-    <div class="flex items-center justify-center w-full">
-      <label for="dropzone-file"
-        class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
-        <div class="flex flex-col items-center justify-center pt-5 pb-6">
+    <span class="text-xl text-gray-700" >Revolut</span>
+    <div class="flex items-center justify-center py-5">
+      <label for="dropzone-file" style="border-color:#0B73B2;"
+        class="flex flex-col items-center justify-center h-30 w-full border-2 border-dashed rounded-lg cursor-pointer bg-gray-50  hover:bg-purple-50">
+        <div class="flex flex-col items-center justify-center pt-3 pb-4">
           <svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -17,5 +17,7 @@
         <input id="dropzone-file" type="file" class="hidden" />
       </label>
     </div>
+    <small> Please refer to <a href="https://help.revolut.com/help/profile-and-plan/managing-my-account/trading-statements-and-reports/" target="_blank" class="text-blue-500">Revolut site</a> to see how to downlaod a CSV of your transactions.</small>
   </div>
 </div>
+
