--- a/views/sections/importers/index.html
+++ b/views/sections/importers/index.html
@@ -12,8 +12,8 @@
   <br>
   <br>
   <div id="filters">
-    <input class="hidden" type="category" name="category" value="food">
+    <input class="hidden" type="category" name="category" value="unknown">
   </div>
-  <div id="#table" hx-get="/expenses/table?category=food" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
+  <div id="#table" hx-get="/expenses/table?category=unknown" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
   </div>
 </div>
