--- a/views/sections/expenses/table.html
+++ b/views/sections/expenses/table.html
@@ -1,4 +1,3 @@
-
 <!-- Table -->
 <div id="table">
   <div class="overflow-x-auto border shadow-md rounded-xl border-gray-200">
@@ -40,13 +39,13 @@
   <!-- Pagination -->
   <div class="flex flex-col items-center">
     <span class="text-sm text-gray-700 dark:text-gray-400">
-      Showing page <span class="font-semibold text-gray-900 dark:text-white">{{ .CurrentPage }}</span> (<span
-        class="font-semibold text-gray-900 dark:text-white">{{ .PageSize }}</span> Entries)
+      Showing page <span class="font-semibold text-gray-900 dark:text-white">{{ .CurrentPage }}/{{ .TotalPages }}</span>
+      (<span class="font-semibold text-gray-900 dark:text-white">{{ .PageSize }}</span> entries)
     </span>
     <div class="inline-flex mt-2 xs:mt-0">
-      <button hx-get="/expenses/table?page_num={{ .PrevPage }}" hx-swap="outerHTML" hx-target="#table" hx-include="#filters input, #filters select"
-        hx-push-url="true"
-        class="flex items-center justify-center px-4 h-10 text-base font-medium text-white bg-gray-800 rounded-s hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+      <button hx-get="/expenses/table?page_num={{ .PrevPage }}" hx-swap="outerHTML" hx-target="#table"
+        hx-include="#filters input, #filters select" hx-push-url="true"
+        class="flex items-center justify-center px-4 h-10 text-base font-medium text-white rounded-s {{ if eq .CurrentPage 0 }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}"
         {{ if eq .CurrentPage 0 }} disabled {{end}}>
         <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
           viewBox="0 0 14 10">
@@ -55,9 +54,10 @@
         </svg>
         Prev
       </button>
-      <button hx-get="/expenses/table?page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table" hx-include="#filters input, #filters select"
-        hx-push-url="true"
-        class="flex items-center justify-center px-4 h-10 text-base font-medium text-white bg-gray-800 border-0 border-s border-gray-700 rounded-e hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+      <button hx-get="/expenses/table?page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table"
+        hx-include="#filters input, #filters select" hx-push-url="true"
+        class="flex items-center justify-center px-4 h-10 text-base font-medium text-white border-0 border-s border-gray-700 rounded-e {{ if eq .CurrentPage .TotalPages }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}"
+        {{ if eq .CurrentPage .TotalPages }} disabled {{end}}>
         Next
         <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
           viewBox="0 0 14 10">
