--- a/views/sections/importers/index.html
+++ b/views/sections/importers/index.html
@@ -5,15 +5,6 @@
   </div>
 </div>
 <div class="p-5 m-0">
-  <span class="ml-2 text-xl text-gray-700">Uncatalogged expenses</span>
-  <br>
-  <span class="ml-2 text-md text-gray-500">Expenses will appear in this section when imported for you to manually set a
-    category.</span>
-  <br>
-  <br>
-  <div id="filters">
-    <input class="hidden" type="category" name="category" value="unknown">
-  </div>
-  <div id="#table" hx-get="/expenses/table?category=unknown" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
+  <div id="#table" hx-get="/importers/table" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
   </div>
 </div>
