--- a/views/sections/expenses/rowEdit.html
+++ b/views/sections/expenses/rowEdit.html
@@ -27,9 +27,9 @@
       value='{{printf "%.2f" .Expense.Amount}}'>
   </td>
   <td class="py-0 px-0 pb-0 mb-0 h-full flex float justify-center items-center">
-    <button id="apply" hx-trigger="click" class="border border-green-300 p-1 w-full font-medium bg-green-200 text-green-500 hover:text-green-800"> <i class='bx bx-check'></i> </button>
-    <div hx-put="/expenses/{{ .Expense.ID }}" hx-swap="innerHTML" hx-target="#mitoast" hx-include="#editRow{{.Expense.ID}} input, #editRow{{.Expense.ID}} select" hx-trigger="click from:#apply"> </div>
-    <div hx-get="/expenses/{{ .Expense.ID }}/row" hx-swap="outerHTML" hx-target="#editRow{{.Expense.ID}}" hx-trigger="reloadRow from:body"> </div>
+    <button id="apply{{.Expense.ID}}" hx-trigger="click" class="border border-green-300 p-1 w-full font-medium bg-green-200 text-green-500 hover:text-green-800"><i class='bx bx-check'></i> </button>
+    <div hx-put="/expenses/{{ .Expense.ID }}" hx-swap="innerHTML" hx-target="#mitoast" hx-include="#editRow{{.Expense.ID}} input, #editRow{{.Expense.ID}} select" hx-trigger="click from:#apply{{.Expense.ID}}"> </div>
+    <div hx-get="/expenses/{{ .Expense.ID }}/row" hx-swap="outerHTML" hx-target="#editRow{{.Expense.ID}}" hx-trigger="reloadRow-{{.Expense.ID}} from:body,click from:#apply{{.Expense.ID}}"> </div>
     <button id="cancel" hx-get="/expenses/{{ .Expense.ID }}/row" hx-swap="outerHTML" hx-target="#editRow{{ .Expense.ID }}" hx-trigger="click" 
       class="border border-red-300 p-1 h-full w-full font-medium bg-red-200 text-red-500 hover:text-red-800"><i class='bx bx-x'></i></button>
   </td>
