--- a/views/sections/importers/table.html
+++ b/views/sections/importers/table.html
@@ -1,14 +1,10 @@
-
-<div id="table">
+<div id="table" hx-get="/importers/table" hx-trigger="reloadImportTable from:body" hx-target="this" hx-swap="outerHTML">
   <div class="overflow-x-auto">
     <span class="ml-2 text-xl text-gray-700">{{ .ExpensesCount }} Uncatalogged expenses</span>
     <br>
     <span class="ml-2 text-md text-gray-500">Expenses will appear in this section when imported for you to manually set
       a
       category.</span>
-    <button id="cancelAll" class="float-right m-2 mb-3 font-medium text-red-600 hover:text-red-800">
-      Cancel all
-    </button>
     <button id="applyAll" class="float-right m-2 mb-3 font-medium text-blue-600 hover:text-blue-800">
       Apply all
     </button>
@@ -64,10 +60,10 @@
             </div>
             <div hx-get="/expenses/{{.ID}}/row" hx-swap="outerHTML" hx-target="#editRow{{.ID}}"
               hx-trigger="click from:#applyAll, click from:#apply-{{.ID}}"> </div>
-            <button id="cancel" hx-get="/expenses/{{.ID}}/row" hx-swap="outerHTML" hx-target="#editRow{{.ID}}"
-              hx-trigger="click"
-              class="border border-red-300 p-1 h-full w-full font-medium bg-red-200 text-red-500 hover:text-red-800">
-              <i class='bx bx-x'></i></button>
+            <!-- <button id="cancel" hx-get="/expenses/{{.ID}}/row" hx-swap="outerHTML" hx-target="#editRow{{.ID}}" -->
+            <!--   hx-trigger="click" -->
+            <!--   class="border border-red-300 p-1 h-full w-full font-medium bg-red-200 text-red-500 hover:text-red-800"> -->
+            <!--   <i class='bx bx-x'></i></button> -->
           </td>
         </tr>
         {{end}}
