--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -31,6 +31,9 @@
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://unpkg.com/htmx.org/dist/ext/class-tools.js"></script>
 <script src="https://unpkg.com/hyperscript.org@0.9.11"></script>
+<!-- Multiselect https://codeshack.io/multi-select-dropdown-html-javascript/#dynamic-creation-with-custom-html-->
+<link href="/assets/css/multiselect.css" rel="stylesheet" type="text/css">
+<script src="/assets/js/multiselect.js"></script>
 <script>
   tailwind.config = {
     darkMode: 'class',
