--- a/views/sections/expenses/filter.html
+++ b/views/sections/expenses/filter.html
@@ -17,14 +17,9 @@
         class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
     </div>
     <div class="flex flex-col">
-      <label for="category" class="block text-sm font-medium text-gray-700">Category</label>
-      <!-- <select id="category" name="category" multiple -->
-      <select id="category" name="category"
+      <label for="categoriesSelect" class="block text-sm font-medium text-gray-700">Category</label>
+      <select id="categoriesSelect" name="categoriesSelect"
         class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-        <option value="">All Categories</option>
-        {{ range $id, $name := .Categories }}
-        <option value="{{$id}}">{{$name}}</option>
-        {{end}}
       </select>
     </div>
     <div class="flex flex-col">
@@ -48,22 +43,51 @@
       </div>
     </div>
   </div>
-  <!-- <div class="flex flex-col"> -->
-  <!--   <label for="page_size" class="block text-sm font-medium text-gray-700">Page Size</label> -->
-  <!--   <input type="number" id="page_size" name="page_size" -->
-  <!--     class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" -->
-  <!--     placeholder="e.g., 10"> -->
-  <!-- </div> -->
-  <!-- <div class="flex flex-col"> -->
-  <!--   <label for="page_num" class="block text-sm font-medium text-gray-700">Page Number</label> -->
-  <!--   <input type="number" id="page_num" name="page_num" -->
-  <!--     class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" -->
-  <!--     placeholder="e.g., 1"> -->
-  <!-- </div> -->
   <div class="mt-4">
-    <button type="button" hx-url-push="true" hx-get="/expenses/table" hx-target="#table" hx-include="#filters input, #filters select"
+    <button type="button" hx-url-push="true" hx-get="/expenses/table" hx-target="#table"
+      hx-include="#filters input, #filters select" hx-vals='js:{categories: getSelectedValues()}'
       class="inline-flex items-center px-4 py-2 bg-indigo-500 border border-transparent rounded-md shadow-sm text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
       Apply Filters
     </button>
   </div>
 </div>
+<script>
+  // Initialize the Multi Select dropdown
+  var selectedValues = [];
+  new MultiSelect('#categoriesSelect', {
+    data: [
+      // This can be commented on js but rendered anyway
+      // {{range $id, $name:= .Categories}} 
+      {
+        value: '{{$id}}',
+        text: '{{$name}}'
+      },
+      // {{end}}
+    ],
+    placeholder: 'Select an option',
+    search: true,
+    selectAll: true,
+    // dropdownHeight: "500px",
+    listAll: false,
+    max: 0,
+    onChange: function (value, text, element) {
+      console.log('Change:', value, text, element);
+    },
+    onSelect: function (value, text, element) {
+      // Add selected value to the array
+      if (!selectedValues.includes(value)) {
+        selectedValues.push(value);
+      }
+      console.log('Selected:', value, text, element);
+    },
+    onUnselect: function (value, text, element) {
+      // Remove unselected value from the array
+      selectedValues = selectedValues.filter(item => item !== value);
+      console.log('Unselected:', value, text, element);
+    }
+  });
+      function getSelectedValues() {
+            return selectedValues.join(',');
+        }
+
+</script>
