--- a/views/sections/importers/index.html
+++ b/views/sections/importers/index.html
@@ -5,6 +5,6 @@
   </div>
 </div>
 <div class="p-5 m-0">
-  <div id="#table" hx-get="/importers/table" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
+  <div id="table" hx-get="/importers/table" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
   </div>
 </div>
