--- a/views/sections/expenses/index.html
+++ b/views/sections/expenses/index.html
@@ -1,6 +1,7 @@
 <div class="p-5 m-0">
   <div id="#filters" hx-get="/expenses/filter" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
   </div>
-  <div id="#table" hx-get="/expenses/table" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
+  <div id="#table" hx-get="/expenses/table" hx-trigger="revealed" hx-target="this"
+    hx-swap="outerHTML">
   </div>
 </div>
