--- a/views/sections/importers/table.html
+++ b/views/sections/importers/table.html
@@ -8,6 +8,9 @@
     <button id="applyAll" class="float-right m-2 mb-3 font-medium text-blue-600 hover:text-blue-800">
       Apply all
     </button>
+    <button hx-get="/importers/table" hx-target="#table" class="float-right m-2 mb-3 font-medium text-pink-600 hover:text-pink-800">
+      Refresh
+    </button>
     <table class="min-w-full bg-white border shadow-md rounded-xl border-gray-200">
       <thead class="rounded-full">
         <tr class="bg-slate-100 text-gray-700 rounded-lg ">
