--- a/views/sections/importers/n26.html
+++ b/views/sections/importers/n26.html
@@ -1,8 +1,10 @@
 <div class="p-10 items-center justify-center w-1/2">
   <div class="overflow-x-auto">
     <div class="flex">
-    <span class="text-xl w-1/2 text-gray-700">N26</span>
-    <button class="font-medium w-1/2 text-right text-blue-600 hover:text-blue-800" hx-include="#n26csv,#spacesTransactions, #externalTransactions" hx-encoding='multipart/form-data' hx-post='/importers/n26' hx-target="#mitoast" > Import </button>
+      <span class="text-xl w-1/2 text-gray-700">N26</span>
+      <button class="font-medium w-1/2 text-right text-blue-600 hover:text-blue-800"
+        hx-include="#n26csv,#spacesTransactions, #externalTransactions" hx-encoding='multipart/form-data'
+        hx-post='/importers/n26' hx-target="#mitoast"> Import </button>
 
     </div>
     <div class="flex items-center justify-center py-5">
@@ -14,29 +16,37 @@
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2" />
           </svg>
-        <input id="n26csv" type='file' name='n26csv' accept=".csv" class="hidden" >
-        <p id="selectedFileName"></p>
+          <input id="n26csv" type='file' name='n26csv' accept=".csv" class="hidden">
+          <p id="selectedFileName"></p>
           <p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span class="font-semibold">Click to upload</span> or
             drag and drop</p>
           <p class="text-xs text-gray-500 dark:text-gray-400">CSV</p>
         </div>
       </label>
-      </div>
-      <div class="">
-        <input id="spacesTransactions" name="spacesTransactions" type="checkbox" value="checked" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-        <label for="spacesTransactions" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Include transactions between <strong style="color:#359E88;">spaces</strong>.</label>
-        <br>
-        <input id="externalTransactions" name="externalTransactions" type="checkbox" value="checked" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-        <label for="externalTransactions" class="ms-2  text-sm font-medium text-gray-900 dark:text-gray-300">Include outgoing <strong style="color:#359E88;">Bank Transfers</strong> and <strong style="color:#359E88;">MoneyBeams</strong></label>
-      </div>
     </div>
-  <br>
-    <small> Please refer to <a href="https://support.n26.com/en-eu/payments-transfers-and-withdrawals/balance-and-limits/how-to-get-bank-statement-n26" target="_blank" class="text-blue-500">N26 documentation</a> to see how to download a CSV of your transactions. All incoming transactions (including those between spaces) will be skipped.</small>
+    <div class="">
+      <input id="spacesTransactions" name="spacesTransactions" type="checkbox" value="checked"
+        class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+      <label for="spacesTransactions" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Include
+        transactions between <strong style="color:#359E88;">spaces</strong>.</label>
+      <br>
+      <input id="externalTransactions" name="externalTransactions" type="checkbox" value="checked"
+        class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+      <label for="externalTransactions" class="ms-2  text-sm font-medium text-gray-900 dark:text-gray-300">Include
+        outgoing <strong style="color:#359E88;">Bank Transfers</strong> and <strong
+          style="color:#359E88;">MoneyBeams</strong></label>
+    </div>
   </div>
+  <br>
+  <small> Please refer to <a
+      href="https://support.n26.com/en-eu/payments-transfers-and-withdrawals/balance-and-limits/how-to-get-bank-statement-n26"
+      target="_blank" class="text-blue-500">N26 documentation</a> to see how to download a CSV of your transactions. All
+    incoming transactions (including those between spaces) will be skipped.</small>
+</div>
 </div>
 <script>
   document.getElementById('n26csv').onchange = function () {
     f = this.value.replace(/.*[\/\\]/, '');
     document.getElementById('selectedFileName').innerText = f;
-};
+  };
 </script>
