--- a/views/sections/expenses/table.html
+++ b/views/sections/expenses/table.html
@@ -1,7 +1,11 @@
 <!-- Table -->
 <div id="table">
-  <div class="overflow-x-auto border shadow-md rounded-xl border-gray-200">
-    <table class="min-w-full bg-white">
+  <div class="overflow-x-auto">
+    <button id="applyAll" class="float-right m-2 mb-3 font-medium text-blue-600 hover:text-blue-800"
+      hx-get="/expenses/add" hx-target="#addRow" hx-swap="outerHTML">
+      New Expense
+    </button>
+    <table class="min-w-full bg-white border shadow-md rounded-xl border-gray-200">
       <thead class="rounded-full">
         <tr class="bg-slate-100 text-gray-700 rounded-lg ">
           <th class="px-4 py-3 text-left">Date</th>
@@ -13,6 +17,7 @@
         </tr>
       </thead>
       <tbody class="text-blue-gray-900">
+        <tr id="addRow"></tr>
         {{range .Expenses}}
         <tr id="expenseRow{{ .ID }}" class="border-b border-blue-gray-200 p-0">
           <td class="px-4 py-1">{{ .Date.Format "02-01-2006" }}</td>
@@ -20,7 +25,8 @@
           <td class="px-4 py-1">{{.Product }}</td>
           <td class="px-4 py-1">
             {{ $colors := nameToColor .Category }}
-            <span class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5  rounded'>{{.Category}}</span>
+            <span
+              class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5  rounded'>{{.Category}}</span>
           </td>
           <td class="px-4 py-1">${{printf "%.2f" .Amount}}</td>
           <td class="px-4 py-1">
